--- a/app/static/css/player_info.css
+++ b/app/static/css/player_info.css
@@ -204,7 +204,7 @@ td {
     margin-top: 25px;
 }
 
-#notes-label {
+.notes-label {
     vertical-align: top;
     font-size: 20px;
     font-weight: bold;
@@ -457,8 +457,8 @@ button:disabled {
 }
 
 #mil-to-college-house-button {
-    background-color: #58d872;
-    border: brown 2px solid;
+    background-color: #6dc07e;
+    border: brown 2px solid !important;
     color: black;
     margin-bottom: 8px;
     border: none;
@@ -482,4 +482,6 @@ button:disabled {
     font-style: italic;
 }
 
-
+.complete {
+    color: green;
+}
