--- a/app/templates/actions.html
+++ b/app/templates/actions.html
@@ -237,11 +237,11 @@
                     <li>pay $1500 school fee to the teacher per new child</li>
                     <li>to have 3rd child, must upgrade house and car</li>
                     <li>4 years to upgrade if twins after first child</li>
-                    <li class="once">less likely to have kids as age:</li>
+                    <li>less likely to have kids as age:</li>
                     <ul>
-                        <li class="once" id="child-100">under 36 = 100% chance of child</li>
-                        <li class="once" id="child-75">ages 36-40 = 75% chance of child</li>
-                        <li class="once" id="child-50">ages 41-45 = 50% chance of child</li>
+                        <li id="child-100">under 36 = 100% chance of child</li>
+                        <li id="child-75">ages 36-40 = 75% chance of child</li>
+                        <li id="child-50">ages 41-45 = 50% chance of child</li>
                     </ul>
                 </ul>
             </td>
@@ -369,7 +369,7 @@
                         {% if not (player_info.path == "military") %}
                         <span class="once">* keep current job part-time for half salary</span><br> 
                         {% else %}
-                        <span class="once">* must get regular job part-time for half salary</span><br>
+                        <span class="once">* must get regular job part-time for half the salary listed</span><br>
                         {% endif %}
                         {% if player_info.path == "military" and player_info.car == "None" %}
                         <span class="once">* must get vehicle</span><br>
@@ -431,6 +431,16 @@
         </tr>
         <tr>
             <td class="action-button">
+                <form action="{{ url_for('backpacking') }}">
+                    <button type="submit" id="backpacking" class="{{ 'afford' if ((5000 * num_people) < amt_can_afford) else 'not-afford' }}">Backpacking</button><br>
+                    <label>pay ${{ "{:,.0f}".format(5000 * num_people) }}</label><br>
+                    <label>receive {{ 250 }} points</label>
+                </form>
+                <form action="{{ url_for('season_tickets') }}">
+                    <button type="submit" id="season_tickets" class="{{ 'afford' if ((10000 * num_people) < amt_can_afford) else 'not-afford' }}">Season Tickets</button><br>
+                    <label>pay ${{ "{:,.0f}".format(50000 + (10000 * num_people)) }}</label><br>
+                    <label>receive {{ "{:,.0f}".format(200 * num_people) }} points</label>
+                </form>
                 <form action="{{ url_for('pool', ptype='buy') }}">
                     <button type="submit" id="buy_pool" class="{{ 'afford' if ((100000) < amt_can_afford) else 'not-afford' }}">Buy Pool</button>
                 </form>
@@ -440,20 +450,20 @@
                 <form action="{{ url_for('major_donor') }}">
                     <button type="submit" id="major_donor" class="{{ 'afford' if ((1000000) < amt_can_afford) else 'not-afford' }}">Major Donor</button>
                 </form>
-                <form action="{{ url_for('season_tickets') }}">
-                    <button type="submit" id="season_tickets" class="{{ 'afford' if ((10000 * num_people) < amt_can_afford) else 'not-afford' }}">Season Tickets</button><br>
-                    <label>pay ${{ "{:,.0f}".format(50000 + (10000 * num_people)) }}</label><br>
-                    <label>receive {{ "{:,.0f}".format(200 * num_people) }} points</label>
-                </form>
-                <form action="{{ url_for('backpacking') }}">
-                    <button type="submit" id="backpacking" class="{{ 'afford' if ((5000 * num_people) < amt_can_afford) else 'not-afford' }}">Backpacking</button><br>
-                    <label>pay ${{ "{:,.0f}".format(5000 * num_people) }}</label><br>
-                    <label>receive {{ 250 }} points</label>
-                </form>
             </td>
             <td class="center yrs-wait">{{ player_info.yrs_til_rich_action }}</td>
             <td>
                 <ul>
+                    <li>Backpacking:</li>
+                    <ul>
+                        <li>pay $5000 per person</li>
+                        <li>receive 250 points</li>
+                    </ul>
+                    <li>Season Tickets:</li>
+                    <ul>
+                        <li>pay $50,000 + $10,000 per person</li>
+                        <li>receive 200 points per person</li>
+                    </ul>
                     <li>Buy pool:</li>
                     <ul>
                         <li>pay $100,000</li>
@@ -470,17 +480,7 @@
                         <li>pay $1,000,000</li>
                         <li>receive 5000 points</li>
                         <span class="once">* can only do once</span>
-                    </ul>
-                    <li>Season Tickets:</li>
-                    <ul>
-                        <li>pay $50,000 + $10,000 per person</li>
-                        <li>receive 200 points per person</li>
-                    </ul>
-                    <li>Backpacking:</li>
-                    <ul>
-                        <li>pay $5000 per person</li>
-                        <li>receive 250 points</li>
-                    </ul>
+                    </ul>  
                 </ul>
             </td>
             <td>
