--- a/app/templates/player_info.html
+++ b/app/templates/player_info.html
@@ -5,6 +5,7 @@
     {{ moment.include_jquery() }}
     {{ moment.include_moment() }}
     {{ JSGlue.include() }}
+
     <div id="game-details">
         <h4 id="game-id" class="detail">Game ID: {{ game.id }}</h4>
         <h4 id="date-started" class="detail">Started: <span id="date">{{ moment(game.date_started).format('MM/DD/YY') }}</span></h4>
@@ -25,7 +26,7 @@
             <button type="submit" id="ready-button" class="detail">READY</button>
         </form>
         {% endif %}
-        {% if player_info.mil_to_college and player_info.mil_start_college == 0 %}
+        {% if player_info.mil_to_college and player_info.mil_start_college == 0 and player_info.job in ["None", "Military"] %}
             <form action="{{ url_for('jobs') }}">
                 <button type="submit" id="mil-to-college-job-button" class="detail">Job</button>
             </form>
@@ -64,17 +65,27 @@
             <button type="submit" class="continue-grad-btn detail">Continue Grad School</button>
         </form>
         {% endif %}
-        {% if announcements %}
-        {% for announcement, level in announcements.items() %}
-            <h3 class="detail announcement {{ level }}">{{ announcement }}</h3>
-        {% endfor %}
-        {% endif %}
-        {% if player_info.end_of_year %}
-        <td id="side-button-cell" colspan="2">
-            <form action="{{ url_for('expenses', testing='false', data='none') }}">
-                <button type="submit" id="end-of-year-button">End of Year</button>
-            </form>
-        </td>
+        {% if (not player_info.ready) and (game.cur_turn != player_info.turn_num) %}
+            {% if announcements %}
+            {% for announcement, level in announcements.items() %}
+                {% if announcement.endsWith("'s turn") %}
+                <h3 class="detail announcement {{ level }}">{{ announcement }}</h3>
+                {% endif %}
+            {% endfor %}
+            {% endif %}
+        {% else %}
+            {% if player_info.end_of_year %}
+            <td id="side-button-cell" colspan="2">
+                <form action="{{ url_for('expenses', testing='false', data='none') }}">
+                    <button type="submit" id="end-of-year-button">End of Year</button>
+                </form>
+            </td>
+            {% endif %}
+            {% if announcements %}
+            {% for announcement, level in announcements.items() %}
+                <h3 class="detail announcement {{ level }}">{{ announcement }}</h3>
+            {% endfor %}
+            {% endif %}
         {% endif %}
     {% endif %}
     </div>
@@ -159,9 +170,59 @@
                 </form>
             </td>
         </tr>
+        <tr>
+            <td class="field-name"><label class="field-label brown">College</label></td>
+            {% if player_info.path == "college" %}
+            <td class="field-val"><label class="black-border once">{{ 4 - player_info.num_yrs_college }} yrs left</label></td>
+            {% elif player_info.grad_college %}
+            <td class="field-val complete"><label class="black-border">Graduated!</label></td>
+            {% else %}
+            <td class="field-val"><label class="black-border">N/A</label></td>
+            {% endif %}
+            <td class="field-name"><label class="field-label brown">Grad 1</label></td>
+            {% if player_info.grad_school and not player_info.done_grad_1 %}
+                {% if (1 - player_info.num_yrs_grad_school) == 1 %}
+                <td class="field-val"><label class="black-border once">{{ 1 - player_info.num_yrs_grad_school }} yr left</label></td>
+                {% else %}
+                <td class="field-val"><label class="black-border once">{{ 1 - player_info.num_yrs_grad_school }} yrs left</label></td>
+                {% endif %}
+            {% elif player_info.done_grad_1 %}
+            <td class="field-val complete"><label class="black-border">Graduated!</label></td>
+            {% else %}
+            <td class="field-val"><label class="black-border">N/A</label></td>
+            {% endif %}
+            <td class="field-name"><label class="field-label brown">Grad 2</label></td>
+            {% if player_info.grad_school and not player_info.done_grad_2 %}
+                {% if (2 - player_info.num_yrs_grad_school) == 1 %}
+                <td class="field-val"><label class="black-border once">{{ 2 - player_info.num_yrs_grad_school }} yr left</label></td>
+                {% else %}
+                <td class="field-val"><label class="black-border once">{{ 2 - player_info.num_yrs_grad_school }} yrs left</label></td>
+                {% endif %}
+            {% elif player_info.done_grad_2 %}
+            <td class="field-val complete"><label class="black-border">Graduated!</label></td>
+            {% else %}
+            <td class="field-val"><label class="black-border">N/A</label></td>
+            {% endif %}
+            <td class="field-name"><label class="field-label brown">Grad 6</label></td>
+            {% if player_info.grad_school and not player_info.done_grad_6 %}
+                {% if (6 - player_info.num_yrs_grad_school) == 1 %}
+                <td class="field-val"><label class="black-border once">{{ 6 - player_info.num_yrs_grad_school }} yr left</label></td>
+                {% else %}
+                <td class="field-val"><label class="black-border once">{{ 6 - player_info.num_yrs_grad_school }} yrs left</label></td>
+                {% endif %}
+            {% elif player_info.done_grad_6 %}
+            <td class="field-val complete"><label class="black-border">Graduated!</label></td>
+            {% else %}
+            <td class="field-val"><label class="black-border">N/A</label></td>
+            {% endif %}
+            <td id="side-button-cell" colspan="2">
+            </td>
+        </tr>
     </table>
+    <!-- <label class="notes-label">Timeline</label> -->
+    <!-- <div id="timeline"></div> -->
     <div id="notes">
-        <label id="notes-label">Notes</label>
+        <label class="notes-label">Notes</label>
         <table id="sticky-notes">
             <tr>
                 <td class="sticky-note">
@@ -304,6 +365,19 @@
                 end_of_year_btn.disabled = true;
             }
         }
+
+        // Timeline
+        // var container = document.getElementById('timeline');
+        // var items = new vis.DataSet([
+        //     {id: 1, content: 'item 1', start: '2013-04-20'},
+        //     {id: 2, content: 'item 2', start: '2013-04-14'},
+        //     {id: 3, content: 'item 3', start: '2013-04-18'},
+        //     {id: 4, content: 'item 4', start: '2013-04-16', end: '2013-04-19'},
+        //     {id: 5, content: 'item 5', start: '2013-04-25'},
+        //     {id: 6, content: 'item 6', start: '2013-04-27'}
+        // ]);
+        // var options = {};
+        // var timeline = new vis.Timeline(container, items, options);
 
     </script>
 {% endblock %}
