--- a/app/templates/cards.html
+++ b/app/templates/cards.html
@@ -262,21 +262,21 @@
             </td>
         </tr>
         <tr>
-            <td class="neutral-card" id="Animal trainer wins pet competition">Animal trainer wins pet competition</td>
-            <td>animal trainer receives $10,000<br>
-                everyone else pays animal trainer $10
+            <td class="neutral-card" id="Dog trainer wins pet competition">Dog trainer wins pet competition</td>
+            <td>dog trainer receives $10,000<br>
+                everyone else pays dog trainer $10
             </td>
         </tr>
         <tr>
-            <td class="neutral-card" id="Animal trainer does pet food commercial">Animal trainer does pet food commercial</td>
-            <td>animal trainer receives $10,000<br>
-                everyone else pays animal trainer $10
+            <td class="neutral-card" id="Dog trainer does pet food commercial">Dog trainer does pet food commercial</td>
+            <td>dog trainer receives $10,000<br>
+                everyone else pays dog trainer $10
             </td>
         </tr>
         <tr>
-            <td class="neutral-card" id="Animal trainer does county fair show">Animal trainer does county fair show</td>
-            <td>animal trainer receives $10,000<br>
-                everyone else pays animal trainer $10
+            <td class="neutral-card" id="Dog trainer does county fair show">Dog trainer does county fair show</td>
+            <td>dog trainer receives $10,000<br>
+                everyone else pays dog trainer $10
             </td>
         </tr>
         <tr>
