--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -3,12 +3,11 @@
     <head>
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+        <link rel="icon" type="image/png" href="{{ url_for('static', filename='imgs/spotted_lemon.png') }}">
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
         <script src="https://cdn.socket.io/socket.io-1.0.0.js"></script>
-    
-        <!-- Timeline -->
-        <!-- <script type="text/javascript" src="//unpkg.com/vis-timeline@latest/standalone/umd/vis-timeline-graph2d.min.js"></script>
-        <link href="//unpkg.com/vis-timeline@latest/styles/vis-timeline-graph2d.min.css" rel="stylesheet" type="text/css" /> -->
+
+        <script src="https://d3js.org/d3.v4.min.js"></script>
 
         {% if page_name %}
         <title>Real Life: {{ page_name }}</title>
@@ -16,23 +15,20 @@
         <title>Real Life</title>
         {% endif %}
         <link rel="stylesheet" href="{{ url_for('static', filename='css/base.css') }}">
-
-        <script src="https://d3js.org/d3.v4.min.js"></script>
     </head>
     <body>
         <div id="nav-container" class="d-flex justify-content-between">
             <div class="mx-auto row row-fluid">
-                <div ><a href="{{ url_for('player') }}" class="nav-link">Home</a></div>
-                <div ><a href="{{ url_for('player_info', card_text='???') }}" class="nav-link">Player Info</a></div>
-                <div ><a href="{{ url_for('cards') }}" class="nav-link">Cards</a></div>
-                <div ><a href="{{ url_for('actions') }}" class="nav-link">Actions</a></div>
-                <div ><a href="{{ url_for('jobs') }}" class="nav-link">Jobs</a></div>
-                <div ><a href="{{ url_for('vehicles') }}" class="nav-link">Vehicles</a></div>
-                <div ><a href="{{ url_for('houses') }}" class="nav-link">Houses</a></div>
-                <div ><a href="{{ url_for('expenses', testing='false', data='none') }}" class="nav-link">Finances</a></div>
-                <div ><a href="{{ url_for('stats') }}" class="nav-link">Analysis</a></div>
-                <div ><a href="{{ url_for('scoreboard') }}" class="nav-link">Scoreboard</a></div>
-                
+                <div class="p-2"><a href="{{ url_for('player') }}" class="nav-link">Home</a></div>
+                <div class="p-2"><a href="{{ url_for('player_info', card_text='???') }}" class="nav-link">Player Info</a></div>
+                <div class="p-2"><a href="{{ url_for('cards') }}" class="nav-link">Cards</a></div>
+                <div class="p-2"><a href="{{ url_for('actions') }}" class="nav-link">Actions</a></div>
+                <div class="p-2"><a href="{{ url_for('jobs') }}" class="nav-link">Jobs</a></div>
+                <div class="p-2"><a href="{{ url_for('vehicles') }}" class="nav-link">Vehicles</a></div>
+                <div class="p-2"><a href="{{ url_for('houses') }}" class="nav-link">Houses</a></div>
+                <div class="p-2"><a href="{{ url_for('expenses', testing='false', data='none') }}" class="nav-link">Finances</a></div>
+                <div class="p-2"><a href="{{ url_for('stats') }}" class="nav-link">Analysis</a></div>
+                <div class="p-2"><a href="{{ url_for('scoreboard') }}" class="nav-link">Scoreboard</a></div>
             </div>
         </div>
         <!--<p id="blah">here</p>
@@ -78,7 +74,9 @@
         <!-- <script src="https://code.jquery.com/jquery-3.2.1.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script> -->
         <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
         <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
-        
+
+        <!-- <link rel="stylesheet" href="{{ url_for('static', filename='css/timesheet.css') }}"> -->
+
         <script type="text/javascript">
             $(document).ready(function () {
                 window.setTimeout(function() {
